--- a/refs.bib
+++ b/refs.bib
@@ -71,7 +71,7 @@
 @MISC{Abrate_experimentalekf-based,
     author = {Fabrizio Abrate and Basilio Bona and Marina Indri},
     title = {Experimental EKF-based SLAM for mini-rovers with IR sensors only},
-    year = {}
+    year = {2007}
 }
 
 @inproceedings{wijk1998triangulation,
