--- a/pictures/algo.tex
+++ b/pictures/algo.tex
@@ -1,5 +1,6 @@
 \documentclass[tikz,border=10pt]{standalone}
 \usetikzlibrary{positioning}
+\usetikzlibrary{shapes.geometric}
 \begin{document}
 
 \tikzset{main node/.style={rectangle,draw,minimum size=14pt,inner sep=2pt}}
